overlays/pelindung-bumi/prod/envoy-gateway/manifests/patch-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pelindung-bumi-gateway
  namespace: envoy-gateway-system
spec:
  listeners:
    - name: http
      protocol: HTTP
      port: 30080
      hostname: "*.pelindungbumi.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 30443
      hostname: "*.pelindungbumi.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls
            namespace: envoy-gateway-system
